--- a/app/views/members/_fulfillments.html.erb
+++ b/app/views/members/_fulfillments.html.erb
@@ -1,9 +1,9 @@
 
-<table class="table table-bordered datatable_only_sorting">
+<table class="table table-condensed table-bordered">
   <thead>
   	<tr>
-	  <th> <%= t('activerecord.attributes.fulfillment.product') %> </th>
 	  <th> <%= t('activerecord.attributes.fulfillment.asigned_at') %> </th>
+	  <th> <%= t('activerecord.attributes.fulfillment.product') %> </th>
 	  <th> <%= t('activerecord.attributes.fulfillment.delivered_at') %> </th>
 	  <th> <%= t('activerecord.attributes.fulfillment.renewable_at') %> </th>    
 	  <th> <%= t('actions') %> </th>    
@@ -12,18 +12,18 @@
    <tbody>
    	  <% unless @fulfillments.nil? %>
       <% @fulfillments.each do |fulfillment| %>
-      	<tr <% if fulfillment.status == 'open' %>
-      	  class = "blacklisted"
-      	  <% end %> >
-			<td> <%= fulfillment.product %> </td>
+   		 <tr <% if fulfillment.open? %> 
+        	  class="ligthgreen" 
+       		 <% end %> >
 			<td> <%= I18n.l fulfillment.assigned_at, :format => :long %> </td>
+			<td> <%= fulfillment.product %> </td>
 			<td> <%= I18n.l fulfillment.delivered_at, 
 			         :format => :long unless fulfillment.delivered_at.nil? %> </td>
 			<td> <%= I18n.l fulfillment.renewable_at, 
 			         :format => :long unless fulfillment.renewable_at.nil? %> </td>
 			<td>
 			  <%= form_for @fulfillment, :as => :fulfillment, :url => member_resend_fulfillment_path(:fulfillment_id => fulfillment.id), do |f| %>
-			  	<%= f.submit t('resend'), :name => 'resend', :class => "btn confirm" if fulfillment.status == 'open' %>
+			  	<%= f.submit t('resend'), :name => 'resend', :class => "btn confirm" if fulfillment.open? %>
 			  <% end %>
 			</td>
 		</tr>
