--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -1,10 +1,11 @@
 <%= link_to "Add a credit card", new_credit_card_path, :class => "btn btn-warning" unless @current_member.lapsed? %>
-<table class="table table-bordered datatable_only_sorting">
+<table class="table table-bordered table-condensed datatable_only_sorting">
   <thead>
     <tr>
       <th> <%= t('activerecord.attributes.credit_card.number') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.expire_date') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.last_successful_bill_date') %> </th>
+      <th> <%= t('actions') %> </th>
       <th> <%= t('actions') %> </th>
     </tr>
   </thead>
@@ -12,7 +13,10 @@
     <% credit_cards.each do |cc| %>
     <tr <% if cc.blacklisted %> 
           class="blacklisted" 
-        <% end %> >
+        <% elsif cc.active %>
+          class = "ligthgreen"
+        <% end %>
+    >
       <td> <%= cc.number %> </td>
       <td> <%= cc.expire_month %> / <%= cc.expire_year %> </td>
       <td> <%= I18n.l cc.last_successful_bill_date, :format => :long if !cc.last_successful_bill_date.nil? %> </td>
@@ -21,8 +25,11 @@
           <%= submit_tag 'BlackList', :name => 'blacklist', :class=> "btn btn-warning confirm" unless @current_member.lapsed? || cc.blacklisted %>
           <% t('activerecord.attributes.credit_card.blacklisted') if cc.blacklisted%>
         <% end %>
+      </td>
+      <td>
         <%= form_for @cc, :as => :credit_card, :url => credit_card_activate_path(:credit_card_id => cc.id), do |f| %>
           <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm" unless cc.active || @current_member.lapsed? || cc.blacklisted %>
+          <%= t('activerecord.atributes.credit_card.active') if cc.active %>
         <% end %>
       </td>
     </tr>
