--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -11,6 +11,7 @@
   </thead>
   <tbody>
     <% credit_cards.each do |cc| %>
+    <!-- Improve css with fnCreatedCell (see the gem was updated.)-->
     <tr <% if cc.blacklisted %> 
           class="blacklisted" 
         <% elsif cc.active %>
