--- a/app/views/members/set_unreachable.html.erb
+++ b/app/views/members/set_unreachable.html.erb
@@ -13,7 +13,7 @@
     <tr>
     <th> 
       <%= submit_tag t(:save), :class => 'btn btn-primary', 
-                               :confirm => t('text_cancel_are_you_sure') %>
+                               :confirm => t('are_you_sure') %>
       <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> 
     </th>
     </tr>
