ref#19117 - Changed syntax from paid to active.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -80,7 +80,7 @@
       <th colspan= "3"> Membership Information </th>
       <th <% if @current_member.lapsed? %>
             class = "red"
-          <% elsif @current_member.paid? %>
+          <% elsif @current_member.active? %>
             class = "green"
           <% elsif %>
             class = "yellow"
