--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -107,7 +107,7 @@
   <tr>
     <td> <%= t('menu.activerecord.term_of_membership') %> 
          <%= t('activerecord.attributes.terms_of_membership.name') %>:
-         <%= @current_member.terms_of_membership.name %> 
+         <%= link_to @current_member.terms_of_membership.name, terms_of_membership_path(:id => @current_member.terms_of_membership) %> 
     </td>
     <td> <%= t('activerecord.attributes.member.reactivation_times') %> 
          <%= @current_member.reactivation_times %> 
