--- a/app/views/members/save_the_sale.html.erb
+++ b/app/views/members/save_the_sale.html.erb
@@ -14,7 +14,7 @@
       </td>
     </tr>
     <tr>
-      <td> <%= submit_tag t(:save), :class => 'btn btn-primary', :confirm => 'are_you_sure' %>
+      <td> <%= submit_tag t(:save), :class => 'btn btn-primary', :confirm => t('are_you_sure') %>
            <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
