added a clear bill_date button to clear if we searched before that field.

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -60,6 +60,7 @@
       <td colspan="2" style='padding: 8px'> 
         <%= t('activerecord.attributes.credit_card.next_bill_date') %>
         <%= text_field :member, :bill_date, :class => 'text_field datepicker_for_search', :readonly => 'readonly', :value => params[:member][:bill_date] %> 
+        <%= link_to 'clear', '#', :id => "clear_bill_date", :class=>"icon-refresh"%>
       </td>
       <td colspan="3" style='padding: 8px'> <%= submit_tag 'Search', :class => "btn btn-inverse" -%> </td>
     </tr>
