--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -5,9 +5,7 @@
   </thead>
   <tr>
     <td> <%= t('activerecord.attributes.terms_of_membership.name') %>: <%= @tom.name %> </td>
-    <td> <%= t('activerecord.attributes.terms_of_membership.mode') %>: <%= @tom.mode %> </td>    
-    <td colspan="2"> <%= t('activerecord.attributes.terms_of_membership.created_at') %>: 
-                     <%= I18n.l @tom.created_at, :format => :long %> </td>
+    <td colspan="3"> <%= t('activerecord.attributes.terms_of_membership.mode') %>: <%= @tom.mode %> </td>
   </tr>
   <tr>
     <td> <%= t('activerecord.attributes.terms_of_membership.installment_amount') %>: 
@@ -33,7 +31,7 @@
   	  <th> <%= t('activerecord.attributes.email_template.name') %> </th>
   	  <th> <%= t('activerecord.attributes.email_template.type') %> </th>
      	<th> <%= t('activerecord.attributes.email_template.client') %> </th>
-      <th> <%= t('created_at') %> </th>
+      <th> <%= t('activerecord.attributes.email_template.external_attributes')%>
     </tr>
   </thead>
   <tbody>
@@ -42,7 +40,7 @@
   	  <td> <%= et.name %> </td>
   	  <td> <%= et.template_type%> </td>
   	  <td> <%= et.client %> </td>
-  	  <td> <%= I18n.l et.created_at, :format => :long %> </td>
+      <td> <%= et.external_attributes.to_s %> </td>
   	</tr>
   	<% end %>
   </tbody>
