Added communication views. With popover

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -156,4 +156,6 @@
   <div class="tab-pane" id="communication"><%= render :partial => 'communications', :locals => { :fulfillments => @communications} %></div>
 </div>
 
-
+<script>
+  $(document).ready(show_member_functions());
+</script>
