--- a/app/views/members/_communications.html.erb
+++ b/app/views/members/_communications.html.erb
@@ -1,21 +1,29 @@
 <table class="table table-condensed table-bordered">
   <thead>
+    <th>success</th>
   	<th>template_name</th>
   	<th>email</th>
   	<th>scheduled_at</th>
   	<th>processed_at</th>
   	<th>template_type</th>
-  	<th>success</th>
+
   </thead>
   <tbody>
   <% unless @fulfillments.nil? %>
   	<% @communications.each do |communication| %>
-	  <td>communication.template_name</td>
-	  <td>communication.email</td>
-	  <td>communication.scheduled_at</td>
-	  <td>communication.processed_at</td>
-	  <td>communication.template_type</td>
-	  <td>coomunication.sent_success</td>
+	  <td> 
+	  	<% if communication.sent_success %> 
+	  	<i class ="icon-ok help" rel= "popover" 
+	  	    data-original-title = "<%= t('activerecord.attributes.communication.response')%> " 
+		    data-content = "<%= communication.response %>"></i>
+	  	<% end %>
+	  </td>
+	  <td> <%= communication.template_name %> </td>
+	  <td> <%= communication.email %> </td>
+	  <td> <%= I18n.l communication.scheduled_at, :format => :long if communication.scheduled_at %> </td>
+	  <td> <%= I18n.l communication.processed_at, :format => :long if communication.processed_at %> </td>
+	  <td> <%= communication.template_type %> </td>
+
 	 <% end %>
   <% end %>
   </tbody>
