--- a/app/views/members/add_club_cash_transaction.html.erb
+++ b/app/views/members/add_club_cash_transaction.html.erb
@@ -1,1 +1,23 @@
-<h1>hello</h1>
+<%= render :partial => "shared/member_information" %>
+
+<%= form_tag(member_add_club_cash_transaction_path) do %> 
+  <table class="table table-condensed table-bordered">
+    <tr> 
+      <td >
+        <div class="input-prepend input-append">  
+	      <%= label :amount, t('activerecord.attributes.club_cash_transaction.amount') %>
+	      <%= text_field_tag :amount %>
+      	</div>
+      </td>
+    </tr>
+    <tr> 
+      <td> 
+	    <%= label :description, t('activerecord.attributes.club_cash_transaction.description') %>
+	    <%= text_area_tag :description, nil ,:style => 'width: 99%; height: 200px' %>
+      </td>
+    </tr>
+    <tr>
+    	<td> <%= submit_tag t('save'), :class => 'btn btn-primary' %> </td>
+    </tr>
+  </table>
+<% end %>
