--- a/app/views/members/add_club_cash_transaction.html.erb
+++ b/app/views/members/add_club_cash_transaction.html.erb
@@ -5,7 +5,7 @@
     <tr> 
       <td >
         <div class="input-prepend input-append">  
-	      <%= label :amount, t('activerecord.attributes.club_cash_transaction.amount') %>
+	      <%= t('activerecord.attributes.club_cash_transaction.amount') %>
 	      <%= text_field_tag :amount %>
       	</div>
       </td>
@@ -17,7 +17,8 @@
       </td>
     </tr>
     <tr>
-    	<td> <%= submit_tag t('save'), :class => 'btn btn-primary' %> </td>
+    	<td> <%= submit_tag t('save'), :class => 'btn btn-primary' %> 
+    	     <%= link_to t('back'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end %>
