On member#show load it will be selected by default the option 'all' in Operations tab.

--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -39,6 +39,6 @@
 </table>
 
 <script>
-  var filter = "<%= @operation_filter %>";
+  var filter = "<%= @operation_filter.nil? ? 'all' : @operation_filter %>";
   $(document).ready(operation_member_functions());
 </script>
