added format long on date.

--- a/app/views/members/_transactions.html.erb
+++ b/app/views/members/_transactions.html.erb
@@ -12,7 +12,7 @@
   <% transactions.each do |transaction| %>
   <tr>
     <td>
-      <%= I18n.l transaction.created_at %>
+      <%= I18n.l transaction.created_at, :format => :long %>
     </td>
     <td>
       <%= transaction.to_label %>
