--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -29,6 +29,8 @@
       <% end %>
       <td>
         <%= link_to "Blacklist", member_blacklist_path, :class => "btn btn-warning" unless @current_member.blacklisted? %>
+        <%= link_to("Approve", '#', :class => "btn btn-primary") if @current_member.can_be_canceled? %>
+        <%= link_to("Reject", '#', :class => "btn btn-warning") if @current_member.can_be_canceled? %> 
         <%= link_to("Cancel", member_cancel_path, :class => "btn btn-danger") if @current_member.can_be_canceled? %>
       </td>
     <% end %>
