fixed search query.

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -60,7 +60,7 @@
     <tr>
       <td colspan="2" style='padding: 8px'> 
         <%= t('activerecord.attributes.credit_card.next_bill_date') %>
-        <%= text_field :member, :bill_date, :class => 'text_field datepicker_for_search', :readonly => 'readonly', :value => (params[:member][:bill_date] if params[:member]) %> 
+        <%= text_field :member, :next_retry_bill_date, :class => 'text_field datepicker_for_search', :readonly => 'readonly', :value => (params[:member][:next_retry_bill_date] if params[:member]) %> 
       </td>
       <td colspan="3" style='padding: 8px'> 
         <%= submit_tag  t('search'), :class => "btn btn-inverse" %>
