--- a/app/views/members/_communications.html.erb
+++ b/app/views/members/_communications.html.erb
@@ -1,6 +1,6 @@
 <table class="table table-condensed table-bordered">
   <thead>
-    <th> <%= t('success') %> </th>
+    <th> <%= t('activerecord.attributes.communication.sent_success') %> </th>
   	<th> <%= t('activerecord.attributes.communication.template_name') %> </th>
   	<th> <%= t('activerecord.attributes.communication.email') %> </th>
   	<th> <%= t('activerecord.attributes.communication.scheduled_at') %> </th>
