--- a/app/views/members/_fulfillments.html.erb
+++ b/app/views/members/_fulfillments.html.erb
@@ -11,6 +11,9 @@
    </thead>
    <tbody>
    	  <% unless @fulfillments.nil? %>
+   	  <% if @fulfillments.count == 0 %>
+        <tr> <td colspan="5"> <%= t('activerecord.attributes.fulfillment.not_found') %> </td> </tr>
+      <% end %> 
       <% @fulfillments.each do |fulfillment| %>
    		 <tr <% if fulfillment.open? %> 
         	  class="ligthgreen" 
