--- a/app/views/members/set_unreachable.html.erb
+++ b/app/views/members/set_unreachable.html.erb
@@ -1,5 +1,4 @@
-<h1><%= params[:action].humanize %> - <%= @current_member.visible_id %> - <%= @current_member.full_name %></h1>
-
+<%= render :partial => "shared/member_information" %>
 
 <%= form_for(member_set_unreachable_path) do %>
   <table class="table table-bordered">
