--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,4 +1,4 @@
-<h1> <%= @current_member.visible_id %> - <%= @current_member.full_name %></h1>
+<%= render :partial => "shared/member_information" %>
 <% if @current_member.blacklisted? %>
 <h1> Blacklisted! </h1>
 <% end %>
