--- a/app/views/members/add_club_cash_transaction.html.erb
+++ b/app/views/members/add_club_cash_transaction.html.erb
@@ -18,8 +18,8 @@
       </td>
     </tr>
     <tr>
-    	<td> <%= submit_tag t('save'), :class => 'btn btn-primary' %> 
-    	     <%= link_to t('back'), show_member_path, :class => 'btn' %> </td>
+    	<td> <%= submit_tag t('buttons.add_club_cash_transaction'), :class => 'btn btn-primary' %> 
+    	     <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end %>
