improved buttons on all views.

--- a/app/views/members/change_next_bill_date.html.erb
+++ b/app/views/members/change_next_bill_date.html.erb
@@ -9,8 +9,8 @@
       </td>
     </tr>
     <tr>
-      <td> <%= submit_tag t(:save), :class => 'btn btn-primary' %>
-           <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </td>
+      <td> <%= submit_tag t('buttons.change_bill_date'), :class => 'btn btn-primary' %>
+           <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end%>
