--- a/app/views/members/blacklist.html.erb
+++ b/app/views/members/blacklist.html.erb
@@ -9,9 +9,9 @@
       </td>
     </tr>
     <tr>
-      <td> <%= submit_tag t(:save), :class => 'btn btn-primary', 
+      <td> <%= submit_tag t('buttons.blacklist_member'), :class => 'btn btn-primary', 
                                     :confirm => t('text_blacklist_are_you_sure') %>
-           <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </td>
+           <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end%>
