--- a/app/views/members/cancel.html.erb
+++ b/app/views/members/cancel.html.erb
@@ -17,11 +17,11 @@
         </th>
       </tr>
       <tr>
-        <th> 
-          <%= submit_tag t(:save), :class => 'btn btn-primary', 
+        <td> 
+          <%= submit_tag t('buttons.cancel_member'), :class => 'btn btn-primary', 
                                    :confirm => t('text_cancel_are_you_sure') %>
-          <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> 
-        </th>
+          <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> 
+        </td>
       </tr>
     </thead>
   </table>
