--- a/app/views/members/refund.html.erb
+++ b/app/views/members/refund.html.erb
@@ -11,9 +11,9 @@
       </td>
     </tr>
     <tr>
-      <td>  <%= submit_tag t(:save), :class => 'btn btn-primary' %>
-      		  <%= link_to t(:full_save), member_full_save_path , :class=> 'btn btn-success' %>
-            <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </td>
+      <td>  <%= submit_tag t('buttons.refund_member'), :class => 'btn btn-primary' %>
+      		  <%= link_to t('buttons.full_save'), member_full_save_path , :class=> 'btn btn-success' %>
+            <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end%>
