--- a/app/views/members/set_undeliverable.html.erb
+++ b/app/views/members/set_undeliverable.html.erb
@@ -13,9 +13,9 @@
     </tr>
     <tr>
     <th> 
-      <%= submit_tag t(:save), :class => 'btn btn-primary', 
+      <%= submit_tag t('buttons.set_wrong_addres'), :class => 'btn btn-primary', 
                                :confirm => t('are_you_sure') %>
-      <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> 
+      <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> 
     </th>
     </tr>
     </thead>
