improved view style

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -87,7 +87,7 @@
       <th <% if @current_member.lapsed? %>
             class = "red"
           <% elsif @current_member.active? %>
-            class = "green"
+            class = "ligthgreen"
           <% elsif %>
             class = "yellow"
           <% end %>
