--- a/app/views/members/_search.html.erb
+++ b/app/views/members/_search.html.erb
@@ -17,7 +17,7 @@
       <th <% if member.lapsed? %>
             class = "red"
           <% elsif member.active? %>
-            class = "green"
+            class = "ligthgreen"
           <% elsif %>
             class = "yellow"
           <% end %>
