--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -28,6 +28,10 @@
     <td> 
       <%= f.label :address, t('activerecord.attributes.member.address'), :class => 'help-inline' %> 
       <%= f.text_field :address, :class => 'text_field'%> 
+      <% if !@member.new_record? && !@member.wrong_address.nil? %>
+        <%= t('activerecord.attributes.member.unset_wrong_address') %>
+        <%= check_box :setter, :wrong_address %>
+      <% end %>
     </td>
     <td> 
       <%= f.label :city, t('activerecord.attributes.member.city'), :class => 'help-inline' %> 
@@ -50,11 +54,15 @@
     <td> 
       <%= f.label :phone_number, t('activerecord.attributes.member.phone_number'), :class => 'help-inline' %>
       <%= f.text_field :phone_number, :class => 'text_field input-medium'%> 
-      <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.phone_number_help')} %>  
+      <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.phone_number_help')} %>
+      <% if !@member.new_record? && !@member.wrong_phone_number.nil? %>
+        <%= t('activerecord.attributes.member.unset_wrong_phone_number') %>
+        <%= check_box :setter, :wrong_phone_number %>
+      <% end %>
     </td>
-    <td> 
-      <%= f.label :email, t('email'), :class => 'help-inline' %> 
-      <%= f.text_field :email, :class => 'text_field'%> 
+    <td>
+      <%= f.label :email, t('email'), :class => 'help-inline' %>
+      <%= f.text_field :email, :class => 'text_field'%>
     </td>
   </tr>  
 
