fixed views. Now gateway_payment_configuration is on TOM view

--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -23,6 +23,24 @@
   </tr>
 </table>
 
+  <table class="table table-bordered table-condensed">
+    <thead>
+    <tr
+      <% if @payment_gateway_configuration_development.nil? %>
+        class="red"
+      <% end %>
+    >
+      <th> <%= @payment_gateway_configuration_development.nil? ? 'The does not have pay gateway configuration mode development' : 'The club has pay gateway configuration for mode development' %> </th>
+    </tr>
+    <tr
+      <% if @payment_gateway_configuration_production.nil? %>
+        class="red"
+      <% end %>
+    >
+      <th> <%= @payment_gateway_configuration_production.nil? ? 'The does not have pay gateway configuration for mode production' : 'The club has pay gateway configuration for mode production' %> </th>
+    </tr>
+    </thead>
+  </table>
 
 <table class="table table-bordered table-condensed">
   <thead>
