--- a/app/views/members/_communications.html.erb
+++ b/app/views/members/_communications.html.erb
@@ -21,7 +21,7 @@
         <div id="myModal<%=communication.id%>" class="well modal hide" style="border: none;">
           <div class="modal-header">
             <a href="#" class="close">&times;</a>
-            <h3> Showing Modal </h3>
+            <h3> <%= t('activerecord.attributes.communication.response') %> </h3>
           </div>
           <div class="modal-body"> <%= communication.response %> </div>
           <div class="modal-footer"> <a href="#" class="btn" data-dismiss="modal" >Close</a> </div>
